# srsotr

./: AUTHORS  COPYING  LICENSE  NEWS  README  README.md  configure.ac
src/: Makefile.am  init.c  init.h  log.c  log.h  misc.c  misc.h  otr.c  otr.h  peerlist.c  peerlist.h  sckio.c  sckio.h  sig.c  sig.h  srsotr.c
